# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

chrome_tests_unit_gypi_values =
    exec_script("//build/gypi_to_gn.py",
                [ rebase_path("chrome_tests_unit.gypi") ],
                "scope",
                [ "chrome_tests_unit.gypi" ])
