# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//chromecast/chromecast.gni")

config("config") {
  defines = []

  if (use_playready) {
    defines += [ "PLAYREADY_CDM_AVAILABLE" ]
  }
}

component("chromecast") {
  deps = [
    "//chromecast/base",
    "//chromecast/base/metrics",
    "//chromecast/crash",
    "//chromecast/media",
  ]
}

group("chromecast_unittests") {
  testonly = true

  deps = [
    "//chromecast/app:cast_shell_unittests",
    "//chromecast/base:cast_base_unittests",
    "//chromecast/crash:cast_crash_unittests",
    "//chromecast/media:cast_media_unittests",
  ]
}
